--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -44,7 +44,7 @@
     <center>
       <p><a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
       <p>last updated on 11.nov.24</p>
-      <p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: momo, basiic</p>
+      <p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: momo, basiic</p>
     </center>
   </aside>
 
