--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -143,7 +143,7 @@
 		<br>
 		<b>last updated: 29.sep.24</b>
 		<br><br>
-		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/links/fonts.html">fonts</a> used: cat paw, momo
+		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/resources/fonts.html">fonts</a> used: cat paw, momo
 
 		<br>
 
