--- a/doqmeat/collection/mail-stamps/index.html
+++ b/doqmeat/collection/mail-stamps/index.html
@@ -57,7 +57,7 @@ coded with love by des
 		<footer>
 			<b>last updated on: 29.may.25</b>
 			<br>
-			<b>credit:</b> bg img by <a href="https://www.pexels.com/photo/brown-wooden-gate-and-green-leafed-tree-63743/" target="_blank">donald tong on pexels</a> / <a href="/notebook/links/fonts.html">fonts</a> used: simple, garden script.
+			<b>credit:</b> bg img by <a href="https://www.pexels.com/photo/brown-wooden-gate-and-green-leafed-tree-63743/" target="_blank">donald tong on pexels</a> / <a href="/notebook/resources/fonts.html">fonts</a> used: simple, garden script.
 			<br>
 			<a href="#">top</a> / <a href="/">home</a> / <a href="/collection">collections</a> / <a href="/sitemap">sitemap</a>
 		</footer>
