--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -507,7 +507,7 @@
 	<footer>
 		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 06.jul.25</b>
 		<br>
-		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/links/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
+		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/resources/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
 		<br>
 		<a href="#">top</a> <img src="/!g/pix/musicnote1.gif"> <a href="/">home</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music">music</a> <img src="/!g/pix/musicnote1.gif"> <a href="fav-albums.html">fav albums</a> <img src="/!g/pix/musicnote1.gif"> <a href="/collection/index.html">collection</a> <img src="/!g/pix/musicnote1.gif"> <a href="/sitemap">sitemap</a>
 	</footer>
