--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -121,30 +121,29 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div class="site-p paper left">
 				<div class="left-in">
 					<p>graphics i've collected and saved</p>
-					<li><a title="img heavy, might have to reload frame" href="resources/graphics.html" target="iframe_b">graphics collection</a></li>
+					<li><a href="resources/graphics.html#emo" target="iframe_b">emoticons</a></li>
+					<li><a href="resources/graphics.html#pix" target="iframe_b">pixels</a></li>
 					<ul>
-						↳ <a href="resources/graphics.html#emo" target="iframe_b">emoticons</a>
-						<br>↳ <a href="resources/graphics.html#pix" target="iframe_b">pixels</a>
-						<ul><small>
-								<a href="resources/graphics.html#tiny" target="iframe_b">tiny</a>, <a href="resources/graphics.html#fav" target="iframe_b">favicons</a>, <a href="resources/graphics.html#big" target="iframe_b">big</a>
-							</small></ul>
-						<br>↳ <a href="resources/graphics.html#div" target="iframe_b">dividers</a>
-						<br>↳ <a href="resources/graphics.html#stickers" target="iframe_b">stickers</a>
-						<ul><small>
-								<a href="resources/graphics.html#cats" target="iframe_b">cats</a>,
-								<a href="resources/graphics.html#music" target="iframe_b">music</a>,
-								<a href="resources/graphics.html#heart" target="iframe_b">hearts</a>,
-								<a href="resources/graphics.html#stationary" target="iframe_b">stationary</a>,
-								<a href="resources/graphics.html#nat" target="iframe_b">nature</a>,
-								<a href="resources/graphics.html#text" target="iframe_b">with text</a>,
-								<a href="resources/graphics.html#other-stickers" target="iframe_b">other</a>,
-								<a href="resources/graphics.html#hw" target="iframe_b">halloween</a>,
-								<a href="resources/graphics.html#long" target="iframe_b">long</a>,
-								<a href="resources/graphics.html#vgs" target="iframe_b">video games</a>
-							</small></ul>
-						<br>↳ <a href="resources/graphics.html#gif" target="iframe_b">gifs</a>
-						<br>↳ <a href="resources/graphics.html#frames" target="iframe_b">frames</a>
+						<li><a href="resources/graphics.html#tiny" target="iframe_b">tiny</a></li>
+						<li><a href="resources/graphics.html#fav" target="iframe_b">favicons</a></li>
+						<li><a href="resources/graphics.html#big" target="iframe_b">big</a></li>
 					</ul>
+					<li><a href="resources/graphics.html#div" target="iframe_b">dividers</a></li>
+					<li><a href="resources/graphics.html#stickers" target="iframe_b">stickers</a></li>
+					<ul>
+						<li><a href="resources/graphics.html#cats" target="iframe_b">cats</a></li>
+						<li><a href="resources/graphics.html#music" target="iframe_b">music</a></li>
+						<li><a href="resources/graphics.html#heart" target="iframe_b">hearts</a></li>
+						<li><a href="resources/graphics.html#stationary" target="iframe_b">stationary</a></li>
+						<li><a href="resources/graphics.html#nat" target="iframe_b">nature</a></li>
+						<li><a href="resources/graphics.html#text" target="iframe_b">with text</a></li>
+						<li><a href="resources/graphics.html#other-stickers" target="iframe_b">other</a></li>
+						<li><a href="resources/graphics.html#hw" target="iframe_b">halloween</a></li>
+						<li><a href="resources/graphics.html#long" target="iframe_b">long</a></li>
+						<li><a href="resources/graphics.html#vgs" target="iframe_b">video games</a></li>
+					</ul>
+					<li><a href="resources/graphics.html#gif" target="iframe_b">gifs</a></li>
+					<li><a href="resources/graphics.html#frames" target="iframe_b">frames</a></li>
 
 					<!-- 		paper left end div -->
 				</div>
@@ -188,11 +187,9 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					<p>note: please <mark>do not <a class="outlink" href="https://www.hostinger.com/tutorials/hotlinking" target="_blank">hotlink</a>!</mark> download them and save them to your own server. i change things around frequently too so it might break lol.</p>
 					<li><a href="F2U/materials.html" target="iframe_d">site materials</a></li>
 					<ul>
-						↳ <a href="F2U/materials.html#bgs" target="iframe_d">backgrounds</a>
-						<br>
-						↳ <a href="F2U/materials.html#pix" target="iframe_d">pixels</a>
-						<br>
-						↳ <a href="F2U/materials.html#cur" target="iframe_d">cursors</a>
+						<li><a href="F2U/materials.html#bgs" target="iframe_d">backgrounds</a></li>
+						<li><a href="F2U/materials.html#pix" target="iframe_d">pixels</a></li>
+						<li><a href="F2U/materials.html#cur" target="iframe_d">cursors</a></li>
 					</ul>
 					<li><a href="F2U/scans.html" target="iframe_d">scans</a></li>
 
@@ -239,9 +236,9 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					<div id="sticky" class="draggable">
 						<br><br>welcome to my little resource notebook! :3<br><img src="/!g/deco/bunnyzzz.gif">
 					</div>
-					<p>in this notebook you'll find many helpful <small>(and fun)</small> links that have helped me throughout my journey of making this site, and host my F2U stuff such as templates, site materials, and more.</p>
+					<p>in this notebook you'll find many helpful links that have helped me throughout my journey of making this site.</p>
+					<p>i will also be sharing my free to use stuff such as templates, site materials, and more! take whatever you need from here!</p>
 					<p>last updated on: <b>10.jul.25</b></p>
-					<p><a href="/">go to homepage</a></p>
 
 					<!-- 		paper left end div -->
 				</div>
