--- a/doqmeat/notebook/resources/index.html
+++ b/doqmeat/notebook/resources/index.html
@@ -332,7 +332,7 @@
 		<li><a href="https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?page=3&order=&license=" target="_blank">pentacom's bitfonts</a></li>
 		<li>other site's font pages! <a href="https://cinni.net/?z=/font" target="_blank">cinni's</a> / <a href="https://scripted.neocities.org/#fonts" target="_blank">scripted's</a> / <a href="https://strawberry-gashes.neocities.org/pixelfonts" target="_blank">strawberry-gashe's</a> / <a href="https://solaria.neocities.org/fonts" target="_blank">solaria's</a></li>
 
-		<p>fonts i've used can be found on <a href="/notebook/links/fonts">this page</a>!</p>
+		<p>fonts i've used can be found on <a href="/notebook/resources/fonts">this page</a>!</p>
 
 		<hr>
 
