--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -133,7 +133,7 @@
 	<footer>
 		<b>last updated: 16.feb.25</b>
 		<br>
-		<b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: gaegu.
+		<b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: gaegu.
 		<br>
 		<a href="#">top</a> ⋆ <a href="/">home</a> ⋆ <a href="/sitemap">sitemap</a>
 	</footer>
