--- a/doqmeat/scrapbook/index.html
+++ b/doqmeat/scrapbook/index.html
@@ -33,7 +33,7 @@
 	<footer>
 		inspired by <a href="https://bisuko.neocities.org/scrapbooks/2023" target="_blank">bisuko</a> and <a href="https://strawberry-gashes.neocities.org/sb23" target="_blank">strawberry-gashes</a>!
 		<br>
-		<b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: garden, newpenji, gaegu
+		<b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: garden, newpenji, gaegu
 		<br>
 		<a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
