--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -41,87 +41,46 @@
 			<li><a href="/fashion/index.html" target="_parent">fashion</a></li>
 			<li><b>writings</b></li>
 			<ul>
-				↳
-				<a href="/journal/index.html" target="_parent">journal</a>
-				<br />
-				↳
-				<a href="/microblog/index.html" target="_parent">microblog</a>
-				<br />
-				↳
-				<a href="/blog/index.html" target="_parent">blog</a>
+				<li><a href="/journal/index.html" target="_parent">journal</a></li>
+				<li><a href="/microblog/index.html" target="_parent">microblog</a></li>
+				<li><a href="/blog/index.html" target="_parent">blog</a></li>
 			</ul>
 			<li><a href="/music/index.html" target="_parent">music</a></li>
 			<ul>
-				↳
-				<a href="/music/fav-albums.html" target="_parent">albums</a>
-				<br />
-				↳
-				<a href="/music/songs/index.html" target="_parent">artists &amp; genres</a>
-				<br />
-				↳
-				<a href="/music/kpop-producers.html" target="_parent">k-pop producers</a>
-				<br />
-				↳
-				<a href="/music/featured.html" target="_parent">featured music</a>
-				<br />
-				↳
-				<a href="/music/cds/index.html" target="_parent">cd collection</a>
-				<br />
-				↳
-				<a href="/music/playlists.html" target="_parent">playlists</a>
-				<br />
-				↳
-				<a href="/music/listening-log/index.html" target="_parent">listening logs</a>
-				<br />
-				↳
-				<a href="/music/recaps/index.html" target="_parent">yearly recaps</a>
-				<br />
-				↳
-				<a href="/music/links.html" target="_parent">related offsite links</a>
+				<li><a href="/music/fav-albums/index.html" target="_parent">fav albums</a></li>
+				<li><a href="/music/songs/index.html" target="_parent">fav artists &amp; genres</a></li>
+				<li><a href="/music/mini-pages/kpop-producers.html" target="_parent">fav k-pop producers</a></li>
+				<li><a href="/music/mini-pages/featured.html" target="_parent">featured music</a></li>
+				<li><a href="/music/cds/index.html" target="_parent">cd collection</a></li>
+				<li><a href="/music/mini-pages/playlists.html" target="_parent">playlists</a></li>
+				<li><a href="/music/listening-log/index.html" target="_parent">listening logs</a></li>
+				<li><a href="/music/recaps/index.html" target="_parent">yearly recaps</a></li>
+				<li><a href="/music/mini-pages/links.html" target="_parent">related offsite links</a></li>
+				<li><a href="/music/mini-pages/depression-cherry-booklet.html" target="_parent">depression cherry custom booklet</a></li>
 			</ul>
 			<li><a href="/shrines" target="_parent">shrines</a></li>
 			<ul>
-				↳
-				<a href="/shrines/mizu" target="_parent">mizu</a>
+				<li><a href="/shrines/mizu" target="_parent">mizu</a></li>
 			</ul>
 			<li><a href="/collection" target="_parent">collections</a></li>
 			<ul>
-				↳
-				<a href="/collection/internet-graphics" target="_parent">internet graphics</a>
-				<br />
-				↳
-				<a href="/collection/mail-stamps" target="_parent">mail stamps</a>
-				<br />
-				↳
-				<a href="/collection/stickers" target="_parent">stickers</a>
-				<br />
-				↳
-				<a href="/collection/cats" target="_parent">cat pics</a>
-				<br />
-				↳
-				<a href="/collection/plushies/index.html" target="_parent">plushies</a>
+				<li><a href="/collection/internet-graphics" target="_parent">internet graphics</a></li>
+				<li><a href="/collection/mail-stamps" target="_parent">mail stamps</a></li>
+				<li><a href="/collection/stickers" target="_parent">stickers</a></li>
+				<li><a href="/collection/cats" target="_parent">cat pics</a></li>
+				<li><a href="/collection/plushies/index.html" target="_parent">plushies</a></li>
 			</ul>
 			<li><b>media logs</b></li>
 			<ul>
-				↳
-				<a href="/vgs" target="_parent">video games</a>
-				<br />
-				↳
-				<a href="/tv" target="_parent">TV</a>
-				<br>
-				↳
-				<a href="/reading/index.html" target="_parent">books</a>
+				<li><a href="/vgs" target="_parent">video games</a></li>
+				<li><a href="/tv" target="_parent">TV</a></li>
+				<li><a href="/reading/index.html" target="_parent">books</a></li>
 			</ul>
 			<li><a href="/learning">learning in public</a></li>
 			<ul>
-				↳
-				<a href="/learning/bash" target="_parent">bash reference sheet</a>
-				<br />
-				↳
-				<a href="/learning/javascript/index.html" target="_parent">learning javascript</a>
-				<br />
-				↳
-				<a href="/learning/python/index.html" target="_parent">learning python</a>
+				<li><a href="/learning/bash" target="_parent">bash reference sheet</a></li>
+				<li><a href="/learning/javascript/index.html" target="_parent">learning javascript</a></li>
+				<li><a href="/learning/python/index.html" target="_parent">learning python</a></li>
 			</ul>
 			<li><a href="/notebook" target="_parent">des' resources</a></li>
 			<ul>
@@ -131,22 +90,15 @@
 			</ul>
 			<ul>
 				<li><b>F2U</b></li>
-				<ul> ↳
-					<a href="/notebook/F2U/stamps.html" target="_parent">stamps</a>
-					<br />
-					↳
-					<a href="/notebook/F2U/materials.html" target="_parent">materials</a>
-					<br />
-					↳
-					<a href="/notebook/F2U/codes.html" target="_parent">templates</a>
-					<br />
-					↳
-					<a href="/notebook/F2U/scans.html" target="_parent">scans</a>
+				<ul>
+					<li><a href="/notebook/F2U/stamps.html" target="_parent">stamps</a></li>
+					<li><a href="/notebook/F2U/materials.html" target="_parent">materials</a></li>
+					<li><a href="/notebook/F2U/codes.html" target="_parent">templates</a></li>
+					<li><a href="/notebook/F2U/scans.html" target="_parent">scans</a></li>
 				</ul>
 				<li><b>tutorials / guides</b></li>
 				<ul>
-					↳
-					<a href="/notebook/tutorials/rss/index.html" target="_parent">RSS feed</a>
+					<li><a href="/notebook/tutorials/rss/index.html" target="_parent">RSS feed</a></li>
 				</ul>
 			</ul>
 			<li><b>info</b> (WIP!)</li>
