--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -207,7 +207,7 @@
 	<footer>
 		<p><b>last updated: 04.jul.25</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
-		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
+		<p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
 
 	<div id="home"><a title="go back home" href="/"><img src="/!g/deco/tv.gif"></a></div>
