--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -79,7 +79,7 @@
 
 
 		<h3>credit</h3>
-		<p>heading <a href="/notebook/links/fonts.html" target="_blank">font</a> is yoster / filter by tags JS code from <a href="https://www.w3schools.com/howto/howto_js_filter_elements.asp" target="_blank">w3schools</a> / iframe links by <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a> / background is from <a href="games/hld/index.html">hyper light drifter</a></p>
+		<p>heading <a href="/notebook/resources/fonts.html" target="_blank">font</a> is yoster / filter by tags JS code from <a href="https://www.w3schools.com/howto/howto_js_filter_elements.asp" target="_blank">w3schools</a> / iframe links by <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a> / background is from <a href="games/hld/index.html">hyper light drifter</a></p>
 	</main>
 
 	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
