--- a/doqmeat/learning/index.html
+++ b/doqmeat/learning/index.html
@@ -31,7 +31,7 @@
 		<footer>
 			<p>....... <a title="go back home" href="/">ᓚᘏᗢ</a> .......</p>
 			<p> &hearts; all made with love by des &hearts;</p>
-			<p><b>credit</b>: <a href="/notebook/links/fonts.html">fonts</a> used: bm-neko, mononoki, power pagedoll from fujimoto's <i>chainsaw man</i></p>
+			<p><b>credit</b>: <a href="/notebook/resources/fonts.html">fonts</a> used: bm-neko, mononoki, power pagedoll from fujimoto's <i>chainsaw man</i></p>
 		</footer>
 	</main>
 </body>
