--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -20,7 +20,7 @@
 		<button onclick="toggleclick('info')" class="x hide">x</button>
 		<p>des' microblog. made for smaller thoughts i want to share.</p>
 
-		<p><b>credit:</b> body bg from <a href="https://unsplash.com/@quinoal?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Quino Al</a> on <a href="https://unsplash.com/photos/body-of-water-and-seashore-JFeOy62yjXk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="https://archive.org/details/WindowsXPExtractedIcons" target="_blank">windows XP icons</a> / <a href="/notebook/links/fonts.html">font</a> used is mononoki</p>
+		<p><b>credit:</b> body bg from <a href="https://unsplash.com/@quinoal?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Quino Al</a> on <a href="https://unsplash.com/photos/body-of-water-and-seashore-JFeOy62yjXk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="https://archive.org/details/WindowsXPExtractedIcons" target="_blank">windows XP icons</a> / <a href="/notebook/resources/fonts.html">font</a> used is mononoki</p>
 
 		<p class="show"><a href="/">go back home?</a></p>
 	</div>
