--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- honestly coun't be assed to do a layout for this so i got one by cinni! https://codepen.io/cinni/pen/NWyNYmy?editors=1100
+<!-- honestly couldn't be assed to do a layout for this so i got one by cinni! https://codepen.io/cinni/pen/NWyNYmy?editors=1100
 ---
 edited with love by des
  -->
 
 <head>
   <meta charset="UTF-8">
-  <title>site info</title>
+  <title>info</title>
+  <link rel="icon" type="image/x-icon" href="/!g/pix/notebook-1.gif">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="body.css">
   <link rel="stylesheet" href="/fonts/stylesheet.css">
@@ -27,16 +28,16 @@ edited with love by des
 
     <!--NAVIGATION-->
     <nav>
+      <h2>sitely</h2>
+      <ul>
+        <li><a href="#info">info</a></li>
+        <li><a href="#tools">tools</a></li>
+      </ul>
       <h2>credit</h2>
       <ul>
         <li><a href="#credit">overall</a></li>
         <li><a href="#homepage-credit">homepages</a></li>
         <li><a href="#insp">inspiration</a></li>
-      </ul>
-      <h2>sitely</h2>
-      <ul>
-        <li><a href="#info">info</a></li>
-        <li><a href="#tools">tools</a></li>
       </ul>
       <h2>archive</h2>
       <ul>
@@ -47,6 +48,16 @@ edited with love by des
     </nav>
 
     <section>
+      <div id="info" class="box">
+        <h2>site info</h2>
+        <ul>
+          <li>live since 11.apr.23 under <b>doqmeat.neocities.org</b></li>
+          <li>under <mark>doqmeat.com</mark> since 24.mar.24!</li>
+          <li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></li>
+          <li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
+          <li>deployed to neocities via <a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink">github</a></li>
+        </ul>
+      </div>
       <div id="credit" class="box">
         <h2>credit</h2>
 
@@ -135,16 +146,6 @@ edited with love by des
           <li>patterned bgs from <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a></li>
           <li><a href="/notebook/resources/fonts.html">fonts</a> used in this page are: typo garden, gaegu, spirit, morningtea, nintendo ds bios, simple</li>
           <li>body background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
-        </ul>
-      </div>
-      <div id="info" class="box">
-        <h2>site info</h2>
-        <ul>
-          <li>live since 11.apr.23 under <b>doqmeat.neocities.org</b></li>
-          <li>under <mark>doqmeat.com</mark> since 24.mar.24!</li>
-          <li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></li>
-          <li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
-          <li>deployed to neocities via <a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink">github</a></li>
         </ul>
       </div>
       <div id="tools" class="box">
