changed body bg of info page

--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -444,7 +444,7 @@ edited with love by des
         <img width="100%" title="v1" src="archive/layouts/230415-music-v1.jpg">
 
         <h3>journal</h3>
-        <img src="archive/layouts/240706-journal.jpg" title="july 2024 - v3">
+        <img src="archive/layouts/240706-journal.jpg" title="july 2024 - v3" width="100%">
         <img width="100%" title="march 2024 - v2.3" src="archive/layouts/240303-journal.jpg">
         <img width="100%" title="may 2024 - v2.2" src="archive/layouts/231214-journal.jpg">
         <img width="100%" title="april 2023 - v1" src="archive/layouts/230420-logs.jpg">
@@ -464,7 +464,7 @@ edited with love by des
   <!--FOOTER-->
   <footer>
     <p><b>last updated on 11.jul.25</b></p>
-    <p><b>credit:</b> layout by <a href="https://codepen.io/cinni/pen/NWyNYmy?editors=1100" target="_blank">cinni</a>, header and body bg are screenshots from <a title="stray gaming log" href="/vgs/games/stray/index.html" target="_blank">stray</a>, heading font is <i>momo's regular</i> by <a href="https://x.com/momodraws/status/1783568797950935295" target="_blank">momodraws</a></p>
+    <p><b>credit:</b> layout by <a href="https://codepen.io/cinni/pen/NWyNYmy?editors=1100" target="_blank">cinni</a>, header is a screenshot from <a title="stray gaming log" href="/vgs/games/stray/index.html" target="_blank">stray</a>, body bg from <a href="https://foollovers.com/mat/food05.html" target="_blank">foollovers</a> font is <i>momo's regular</i> by <a href="https://x.com/momodraws/status/1783568797950935295" target="_blank">momodraws</a></p>
     <p><a href="/">homepage</a> - <a href="/sitemap">sitemap</a></p>
   </footer>
   <div class="container"></div>
