added a quiz to abt

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -63,7 +63,9 @@
 		<div class="header"><img src="!g/folder.png" class="folder"> quiz_results<img onclick="closeBox('quiz')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
-				<A href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F"><img border="0" src="http://www.theotaku.com/guru_results/3913_Sakura_Miku.jpg" width="100%" alt="Which Hatsune Miku Nendoroid Model Are You?" /><br /></a><A href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F">Which Hatsune Miku Nendoroid Model Are You?</A><br />Hosted By theOtaku.com: <a href="http://www.theotaku.com" title="Anime">Anime</a>
+				<a href="http://cupped-expressions.net/cheese/quiz/" target="_blank"><img src="!g/quiz/chesse.gif" alt="I am emmental cheese!"></a><br><b><a href="http://cupped-expressions.net/cheese/quiz/" target="_blank">Cheese Test: What type of cheese are you?</a></b>
+				<hr>
+				<a href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F"><img border="0" src="http://www.theotaku.com/guru_results/3913_Sakura_Miku.jpg" width="100%" alt="Which Hatsune Miku Nendoroid Model Are You?" /><br /></a><a href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F">Which Hatsune Miku Nendoroid Model Are You?</a><br />Hosted By theOtaku.com: <a href="http://www.theotaku.com" title="Anime">Anime</a>
 				<hr>
 				<A href="https://www.theotaku.com/quizzes/view/3096/which_madoka_magica_girl_are_you%3F"><img border="0" src="http://www.theotaku.com/guru_results/3096_Mami_Tomoe.jpg" width="100%" alt="Which Madoka Magica Girl Are You?" /><br /></a><A href="https://www.theotaku.com/quizzes/view/3096/which_madoka_magica_girl_are_you%3F">Which Madoka Magica Girl Are You?</A><br />Hosted By theOtaku.com: <a href="http://www.theotaku.com" title="Anime">Anime</a>
 				<hr>
