added some buttons to wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -38,6 +38,7 @@
 			<a title="nico - love the index page layout and his art style is very neat. love the cat creatures" href="https://spiders.neocities.org" target="_blank"><img src="!g/spiders.gif"></a>
 			<a title="freyde - an AMAZING collection of pages dedicated to various things." href="https://amriel.neocities.org" target="_blank"><img src="!g/amriel.png"></a>
 			<a title="meek - HATSUNE MIKU!" href="https://mikufan3939.neocities.org" target="_blank"><img src="!g/mikufan3939.png"></a>
+			<a title="spencer" href="https://foggybear42.net" target="_blank"><img src="!g/foggybear42.gif" alt="foggybear42"></a>
 			<a title="bridget - super neat little site!! i love the layout of this one and the webmaster's art is super nice!!!" href="https://bridget.neocities.org" target="_blank"><img src="!g/bridget.gif"></a>
 			<a title="jeith - a very nostalgic site, lots of nintendo stuff! very cozy" href="https://jeith.neocities.org" target="_blank"><img src="!g/jeith.gif"></a>
 			<a title="lisa - i love the webmaster's writing style. i can spend HOURS reading this site." href="https://maggotgirl2002.neocities.org" target="_blank"><img src="!g/maggotgirl2002.gif"></a>
@@ -231,6 +232,8 @@
 			<a href="https://pux.nehukon.de/" target="_blank" title="puxped"><img src="!g/puxped.svg" alt="puxped"></a>
 			<a title="nathanntan" href="https://nathanntan.neocities.org/" target="_blank"><img src="!g/nathanntan.png"></a>
 			<a title="nic" href="https://51db.neocities.org/" target="_blank"><img src="!g/51db.gif" alt="51db"></a>
+			<a title="vy" href="https://spoonful.neocities.org" target="_blank"><img src="!g/spoonful.png" alt="spoonful"></a>
+			<a title="callie" href="https://tectrix.neocities.org/" target="_blank"><img src="!g/tectrix.gif" alt="tectrix"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
