--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,6 +52,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>15.jul.25 - 7pm</b> been messing around with <a href="https://11ty.dev" target="_blank" class="outlink">eleventy</a> in hopes of getting something together for pages like my <a href="/journal">journal</a> and <a href="/blog">blog</a> but i've been having trouble trying to figure out how i could have eleventy working only in some directories of my website. i tried putting my entire site through eleventy but given how big my site is, it's not something i really fuck with... i fear <i>doqmeat.com</i> will be hand-coded til the day i die. though i def have to say that static site generators are pretty neat! i might move my journal log to a different subdomain at some point so i can run it through 11ty but i ain't doing all that right now. i am thinking of using it for my <a href="https://sinnamota.doqmeat.com" target="_blank">siinamota fanlisting</a> though...</p>
+				</article>
+				<article>
 					<p><b>04.jul.25 - 1am</b> the new <a href="https://youtu.be/tAzAhDNdehs?si=9MBXt9As7_gesrcr" target="_blank" class="outlink">chainsaw man reze movie trailer</a> just came out and there's like 3 seconds of angel devil in it and i almost went insane. idk what it is but good lord. he is the most beautiful girl i've ever seen. <button onclick="showPic('!g/250704-angel-1.png','screenshot of angel','i\'m not sure if i wanna be him or be with him or WHAT')">angel-1.png</button> <button onclick="showPic('!g/250704-angel-2.png','screenshot of angel','i\'m not sure if i wanna be him or be with him or WHAT')">angel-2.png</button></p>
 				</article>
 				<article>
