--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -30,10 +30,10 @@
 		<center>
 			<h1>sitemap</h1>
 		</center>
-		<li><a href="/" target="_parent">homepage</a></li>
-		<li><a href="rss.xml" target="_parent">RSS feed</a></li>
-		<li><a href="sitemap.html" target="_blank">sitemap</a></li>
 		<ul>
+			<li><a href="/" target="_parent">homepage</a></li>
+			<li><a href="rss.xml" target="_parent">RSS feed</a></li>
+			<li><a href="sitemap.html" target="_blank">sitemap</a></li>
 			<li><a href="/about/index.html" target="_parent">about</a></li>
 			<li><a href="/photobook/index.html" target="_parent">photobook</a></li>
 			<li><a href="/scrapbook/index.html" target="_parent">scrapbook</a></li>
@@ -101,10 +101,7 @@
 					<li><a href="/notebook/tutorials/rss/index.html" target="_parent">RSS feed</a></li>
 				</ul>
 			</ul>
-			<li><b>info</b> (WIP!)</li>
-			<ul>
-				<li><a href="/info/credit.html" target="_parent">credit &amp; insp</a></li>
-			</ul>
+			<li><a href="/info" target="_parent">site info &amp; archive</a></li>
 			<li><a href="https://doqmeat.atabook.org/" target="_blank" class="outlink">guestbook</a></li>
 			<ul>
 				<li><a href="/guestbook/archive1.html">archived 123guestbook</a></li>
