--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>16.jul.25</b> - new featured music!</p>
       <p><b>06.jul.25</b> - added <i>PMMM the movie OST</i> to <a href="cds/index.html">cd collection</a> + added a spinning cd to every album on hover!</p>
       <p><b>02.jul.25</b> - new featured music :3 + added <i>11100011</i> to <a href="fav-albums/index.html">fav-albums</a> and to <a href="cds/index.html">cd collection</a></p>
       <p><b>29.may.25</b> - added <i>PMMM: rebellion OST</i> to <a href="cds/index.html">cd collection</a></p>
@@ -89,15 +90,15 @@
     <div id="featured" class="box">
       <h3>featured song &amp; album</h3>
       <div class="song">
-        <h4><b>icarus</b> - ARTMS</h4>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/D-w2HwG18vg?si=94-0p97TVcUWaB8G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>whenever there's silence my brain immediately plays this song. so beautiful to me even though i don't really listen to it that often, but it left a very strong impression on me. <q>HURRICANEEEEEEE</q></p>
+        <h4><b>ruder buster</b> - toby fox</h4>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/N117e1Ub39A?si=lPAEuU6iPJn7r7OB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>would yall believe me if i said that i almost started crying when i got to the <a href="https://youtu.be/N117e1Ub39A?si=JB3ELBuLSmA-mDLe&t=66" target="_blank" class="outlink">01:06</a> mark of this song... there is just something so so beautiful to me about the gorgeous development of this song. i think i kinda got emotional thinking about how far <b>toby fox</b> has gotten in his music after being a fan of his since the homestuck days. he really just keeps getting better and better huh... that's my goat right there.</p>
       </div>
       <div class="lp">
-        <h4><b>error ep</b> - iki3/ewe</h4>
-        <iframe style="border: 0; width: 250px; height: 392px;display:block;margin:auto;" src="https://bandcamp.com/EmbeddedPlayer/album=3990044494/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless><a href="https://ewemusic01.bandcamp.com/album/error-ep">error ep by uki3/ewe</a></iframe>
-        <p>some very fun vocaloid with such great electronic instrumentals for its songs... i need to check out this producer more!!!</p>
-        <p><b>highlights:</b> blood and fish, arazome train</p>
+        <h4><b>troy</b> - ukie3/ewe</h4>
+        <iframe style="border: 0; width: 250px; height: 392px; margin:auto; display:block" src="https://bandcamp.com/EmbeddedPlayer/album=3367247975/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless><a href="https://ewemusic01.bandcamp.com/album/troy">troy by uki3/ewe</a></iframe>
+        <p>solidddd vocaloid album!! has some very very fun electronic pieces sprinkled throughout it.</p>
+        <p><b>highlights:</b> ウエンディ, dancer in the dark, カフネ</p>
       </div>
       <hr>
 
@@ -135,7 +136,7 @@
     <footer id="foot" class="box">
       <img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi" style="margin:15px 5px" align="left">
       <img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku" style="margin:15px 5px" align="right">
-      last updated on 04.jul.25
+      last updated on 16.jul.25
       <br>
       <b>credit:</b>
       bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>
