--- a/doqmeat/music/mini-pages/featured.html
+++ b/doqmeat/music/mini-pages/featured.html
@@ -53,21 +53,46 @@
 <body>
 	<div id="frame">
 		<h2>featured music</h2>
-		<p>every once in a while i pick a song &amp; album to highlight on my page! take these as recommendations and just stuff i'm currently listening to :3</p>
+		<p>every once in a while i pick a <mark>song &amp; album</mark>to highlight on my page! take these as recommendations and just stuff i'm currently listening to :3</p>
+
 		<!-- contents 
-<details open><summary>
-<span class="date">00.xxx.25 - ? : </span>
-</summary>
-<table><td class="t-left">
-iframe1
-</td><td class="t-right">
-iframe2
-</td></table>
-</details>
--->
 		<details open>
 			<summary>
-				<span class="date">02.jul.25 - ? : </span>icarus / error ep
+				<span class="date">00.xxx.25 - ? : </span>
+			</summary>
+			<table>
+				<td class="t-left">
+					iframe1
+				</td>
+				<td class="t-right">
+					iframe2
+				</td>
+			</table>
+		</details>
+-->
+
+		<details open>
+			<summary>
+				<span class="date">16.jul.25 - ? : ruder buster / troy</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<p><b>ruder buster</b> - toby fox</p>
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/N117e1Ub39A?si=lPAEuU6iPJn7r7OB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>would yall believe me if i said that i almost started crying when i got to the <a href="https://youtu.be/N117e1Ub39A?si=JB3ELBuLSmA-mDLe&t=66" target="_blank" class="outlink">01:06</a> mark of this song... there is just something so so beautiful to me about the gorgeous development of this song. i think i kinda got emotional thinking about how far <b>toby fox</b> has gotten in his music after being a fan of his since the homestuck days. he really just keeps getting better and better huh... that's my goat right there.</p>
+				</td>
+				<td class="t-right">
+					<p><b>troy</b> - ukie3/ewe</p>
+					<iframe style="border: 0; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=3367247975/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless><a href="https://ewemusic01.bandcamp.com/album/troy">troy by uki3/ewe</a></iframe>
+					<p>solidddd vocaloid album!! has some very very fun electronic pieces sprinkled throughout it.</p>
+					<p><b>highlights:</b> ウエンディ, dancer in the dark, カフネ</p>
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">02.jul.25 - 16.jul.25 : </span>icarus / error ep
 			</summary>
 			<table>
 				<td class="t-left">
