--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -16,13 +16,13 @@ you're free to take whatever you need from my site, but please refrain from taki
 	<title>des' digital journal</title>
 	<meta name="description" content="des' corner on the interwebs!">
 	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="doqmeat RSS feed">
-	<link rel="icon" type="image/x-icon" href="/!g/pix/silly-cat.gif">
+	<link rel="icon" type="image/x-icon" href="!g/pix/silly-cat.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="!f/v5/body.css?0628" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="/!f/tooltip-jquary.js"></script>
-	<script src="/!f/tooltip.js"></script>
+	<script src="!f/tooltip-jquary.js"></script>
+	<script src="!f/tooltip.js"></script>
 </head>
 
 <body>
@@ -164,8 +164,8 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> overwatch 2, infinity nikki, fallout new vegas, bloodborne</p>
-					<p><span class="title">watching: </span> jojo's bizarre adventure</p>
+					<p><span class="title">playing: </span> infinity nikki, overwatch 2, bloodborne</p>
+					<p><span class="title">watching: </span> the summer hikaru died, jojo's bizarre adventure (part 3)</p>
 					<p><span class="title">reading: </span> <a href="https://javascript.info/" target="_blank" class="outlink">the modern javascript tutorial</a></p>
 					<p><span class="title">working on: </span> <a href="https://roadmap.sh/frontend?s=67a96538f86334348220c214" target="_blank" class="outlink">frontend roadmap</a>, having a fun summer break!</p>
 					<p class="date">last updated: 22.jun.25</p>
@@ -350,9 +350,10 @@ you're free to take whatever you need from my site, but please refrain from taki
 		<button id="dialog-disagree" onclick="chatPopup('nope')">no, i don't agree...</button>
 	</dialog>
 
-	<script src="https://status.cafe/current-status.js?name=doqmeat" defer></script>
+	<script src="!f/v5/display.js"></script>
 	<script src="!f/v5/script.js?0620"></script>
 	<script src="!f/v5/last-fm.js?0613"></script>
+	<script src="https://status.cafe/current-status.js?name=doqmeat" defer></script>
 </body>
 
 </html>
